# Bedrock-Chat

./: .env.example  .gitignore  AUDIT_2_PERFORMANCE_REPORT.md  AUDIT_3_UX_BETA_READINESS_REPORT.md  AUTH_DEV_MODE.md  BEDROCK-REFERENCE.md  Bedrock_Chat_Frontend_PRD.md  CLAUDE.md  COMPONENTS.md  CONTRIBUTING.md  IMPLEMENTATION_AUDIT_2026-02-13.md  MAIN_LAYOUT_SUMMARY.md  PERFORMANCE_AUDIT.md  PRD.md  README.md  ROADMAP.md  SECURITY-AND-COMPLIANCE.md  TESTING.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  tailwind.config.ts  tsconfig.json
.github/: pull_request_template.md
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
audit/: .env.audit.example  README.md  auth.setup.ts  config.ts  package.json  routes.ts  run-audit.ts  tsconfig.json
components/: DownloadBanner.tsx  error-boundary.tsx  error-recovery.tsx  not-found-redirect.tsx  user-profile-card.tsx
developer-docs/: astro.config.mjs  package.json
email-templates/: SMTP-VERIFICATION-CHECKLIST.md
hooks/: useAnalytics.ts  useDirectCallListener.ts  useFocusTrap.ts  useHaptics.ts  useReducedMotion.ts
lib/: anti-gaming.ts  approved-colors.ts  client-detection.ts  data-export.ts  dev-mode-helpers.ts  easter-eggs.ts  email.ts  encryption.ts  feature-flags.ts  index.ts  otp.ts  performance-budget.ts  performance.ts  platform-roles.server.ts  points-system.ts  (+2 more)
src-tauri/: Cargo.toml  PRIVACY.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  game_list.rs  lib.rs  main.rs  overlay.rs  performance.rs
(+614 files in other folders)
